# squeal

./: README.md  pyproject.toml
squeal/: squeal.py
