[tool.poetry]
name = "squeal"
version = "0.1.0"
description = "A simple utility to do SQL queries."
authors = ["Adolph Vogel <ajvogel@gmail.com>"]
readme = "README.md"
packages = [
  {include="squeal"}
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
rich = "^13.5.2"
typer = "^0.9.0"
sqlalchemy = "^2.0.20"
pyodbc = "^4.0.39"
pyarrow = "^13.0.0"

[tool.poetry.scripts]
squeal = "squeal.squeal:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
